# kanban

./: .flake8  .gitignore  README.md  db.sqlite3  pyproject.toml  test_parse_template.py
.agents/rules/: cli-app.md  http-api.md  running-python-commands.md  testing.md
config/: settings.py  urls.py
kanban_app/: admin.py  api.py  apps.py  history_logger.py  models.py  test_api.py  tests.py  views.py
kanban_app/management/commands/: kanban.py
kanban_app/migrations/: 0001_initial.py  0002_project_board_project.py  0003_project_is_deleted.py  0004_project_next_task_id_task_project_task_id.py  0005_tag_task_tags.py  0006_taskstatushistory.py  0007_task_assigned_to.py  0008_taskassignmenthistory.py
static/css/: style.css
static/js/: main.js
task_history/: project_5.txt  project_6.txt  project_7.txt
templates/: base.html
templates/kanban_app/: board.html  project_list.html
templates/kanban_app/partials/: column_form.html  columns.html  history_modal.html  project_form.html  projects.html  tags.html  task_assign_form.html  task_details.html  task_form.html  task_tags_form.html
templates/registration/: login.html
